# KukaRosOpenCommunication

./: LICENSE  README.md
KUKAVARPROXY rev 6.1.0.101/: README.md
kuka_hw_axis/: CMakeLists.txt  README.md  package.xml
kuka_hw_axis/config/: hardware_controllers.yaml
kuka_hw_axis/include/kuka_hw_axis/: kuka_hardware_interface.h
kuka_hw_axis/launch/: radian.launch  trajectory.launch
kuka_hw_axis/src/: kuka_hw_axis_interface_main.cpp  kuka_hw_interface_axis.cpp
kuka_hw_cart/: CMakeLists.txt  README.md  package.xml
kuka_hw_cart/config/: controller_joint_names.yaml  hardware_controllers.yaml
kuka_hw_cart/include/kuka_hw_cart/: kuka_hardware_interface_cart.h
kuka_hw_cart/launch/: test_pos.launch
kuka_hw_cart/src/: kuka_hardware_interface_cart.cpp  kuka_hardware_interface_cart_main_node.cpp
kuka_hw_cart_vel/: CMakeLists.txt  package.xml
kuka_hw_cart_vel/config/: controller_joint_names.yaml  hardware_controllers.yaml
kuka_hw_cart_vel/include/kuka_hw_cart_vel/: kuka_class.h  kuka_hw_cart_vel.h  kuka_robot_state_publisher.h
kuka_hw_cart_vel/launch/: test.launch
kuka_hw_cart_vel/src/: kukaCircleControl.cpp  kukaHelisControl.cpp  kukaSinControl.cpp  kuka_hw_cart_vel.cpp  kuka_hw_cart_vel_main_node.cpp  kuka_robot_state_publisher.cpp  squareTrajectory.cpp
kuka_kr6_support/: README.md
kuka_moveit_configuration/: CMakeLists.txt  package.xml
kuka_moveit_configuration/config/: controller.yaml  fake_controllers.yaml  joint_limits.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml
kuka_moveit_configuration/launch/: controller.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
kuka_ros_open_comm/: CMakeLists.txt  package.xml
kuka_ros_open_comm/include/kuka_ros_open_comm/: KRLAxis.h  KRLE6Axis.h  KRLE6Pos.h  KRLEnum.h  KRLFrame.h  KRLInt.h  KRLPos.h  KRLReal.h  KRLStruct.h  KRLVariable.h  kuka_client.h
